# wolf3d

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  Readme.md  asan.supp  author  bench.txt  bla  callgrind.out.7761  callgrind.out.noopt  check_norm.sh  conf.sh  init_conf.sh  map.w3d  run.sh  stats.sh  t.w3d  test  valg_out  wolf3d
data/map/: demo.w3d  map.w3d  t.w3d
data/sprite/: sprites.conf
data/texture/: textures.conf
includes/: anim.h  audio.h  camera.h  entity.h  env.h  event.h  export_bmp.h  list.h  parser.h  player.h  raycast.h  sdl_m.h  snake.h  sprite.h  text.h  texture.h  types.h
libft/: Makefile
libft/includes/: ft_input.h  ft_list.h  ft_math.h  ft_type.h  libft.h
libtpool/: Makefile
libtpool/includes/: libtpool.h
libtpool/srcs/: tp_pool.c  tp_pool2.c  tp_queue.c  tp_thread.c  tp_thread2.c
map_generator/: Makefile  c.w3d  cool.w3d  sprites  tert.w3d  test.w3d  truc.w3d  w3d_generator
map_generator/includes/: algo.h  editor.h  gen_env.h  inspector.h  lft_plus.h  map_edit.h  mouse_tracker.h  objects_edit.h  painter.h  sdl_plus.h  ui.h  ui_positions.h
map_generator/srcs/: algo.c  brush_utilities.c  brushes.c  buttons.c  checkbox.c  doors.c  draw_grid.c  draw_grid_lines.c  draw_line.c  draw_map.c  draw_node.c  draw_player_radar.c  editmod.c  editor.c  env_create_buttons.c  env_destroy.c  env_init.c  env_tools.c  inspector_init.c  main.c  manage_binds.c  map.c  map_props_init.c  mouse_tools.c  mouse_track.c  obj_prevbox_init.c  objects.c  paint_bucket_tools.c  panel.c  panel_draw.c  panel_tex.c  panel_tools.c  save_file.c  slider.c  tex_previewbox.c  texdata_draw.c  tools.c  toolset.c  wall_prevbox_init.c
sprites/: sprites.conf
srcs/: anim.c  color_filters.c  depth_filters.c  entity.c  env.c  env_1.c  env_2.c  export_bmp_1.c  list.c  main.c  manage_binds.c  map_parser.c  move_1.c  move_2.c  move_3.c  raycast.c  raycast_2.c  raycast_3.c  raycast_4.c  raycast_sprites.c  sprite.c  types.c  vector.c
srcs/event/: event.c  event_1.c  event_2.c  event_3.c  event_4.c  move_1.c  move_2.c  move_3.c  move_4.c
textures/: test.xcf  textures.conf
(+284 files in other folders)
